fixed spacing issues for subpages

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -126,23 +126,23 @@ h2 {
   }
 }
 
-.marketing {
-  .row {
-    margin-bottom: 10px;
-  }
-
-  .row:last-child {
-    margin-bottom: 0;
-  }
-  
-  h4 [class*=" icon-"], h4 [class^="icon-"] {
-    margin-right: 5px;
-    vertical-align: -10%;
-    font-size: 28px;
-    line-height: 1;
+.row {
+  margin-bottom: 10px;
+  &.about {
+    margin: 0 0 0 0;
   }
 }
 
+.row:last-child {
+  margin-bottom: 0;
+}
+
+h4 [class*=" icon-"], h4 [class^="icon-"] {
+  margin-right: 5px;
+  vertical-align: -10%;
+  font-size: 28px;
+  line-height: 1;
+}
 
 .dependency {
   .pass {
@@ -160,5 +160,6 @@ h2 {
 
 #capitan-nav {
   margin-top: 0;
+  margin-bottom: 0;
   position: relative;
 }
